--- a/docnote/View/Documents/Form_063_o_Window.xaml
+++ b/docnote/View/Documents/Form_063_o_Window.xaml
@@ -55,11 +55,11 @@
         <Label VerticalAlignment="Center" Margin="5" Grid.Row="1" >Прізвище</Label>
         <Label VerticalAlignment="Center" Margin="5" Grid.Row="2" >Тестовий текст</Label>
         <Label 
-                 Content="{Binding Path=Form_063_o.CreationDate, StringFormat={}{0:dd/MM/yyyy HH:mm}}" 
+                 Content="{Binding Path=Document.CreationDate, StringFormat={}{0:dd/MM/yyyy HH:mm}}" 
                  VerticalContentAlignment="Center" Margin="0,10,5,5" Grid.Column="1">
         </Label>
         <Label 
-                 Content="{Binding Path=Form_063_o.LastName}" 
+                 Content="{Binding Path=Document.LastName}" 
                  VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="1" >
         </Label>
         <!--<TextBox Style="{StaticResource Validate}" 
@@ -71,7 +71,7 @@
             </i:Interaction.Behaviors>
         </TextBox>-->
         <TextBox 
-                 Text="{Binding Path=Form_063_o.TestText}" 
+                 Text="{Binding Path=Document.TestText}" 
                  VerticalContentAlignment="Center" Margin="0,5,5,5" Grid.Column="1" Grid.Row="2" >
         </TextBox>
 
@@ -105,7 +105,7 @@
         <Button Command="{Binding Path=Form_063_o_SaveAndCloseClickCommand}" Content="Зберегти і закрити" HorizontalAlignment="Center" 
                 Grid.Row="6" VerticalAlignment="Top" Margin="10,25,27,0"/>
         <Button Command="{Binding Path=Form_063_o_CloseClickCommand}"  Content="Закрити" HorizontalAlignment="Left" Margin="25,25,0,0" Grid.Row="6" VerticalAlignment="Top" Width="74" Grid.Column="1"/>
-        <Button Command="{Binding Path=Form_063_o_CreateAndSaveWordClickCommand}" Content="Згенерувати і зберегти Ворд" HorizontalAlignment="Center" 
+        <Button Command="{Binding Path=CreateAndSaveWordClickCommand}" Content="Згенерувати і зберегти Ворд" HorizontalAlignment="Center" 
                 Grid.Row="6" Grid.Column="2" VerticalAlignment="Top" Margin="10,25,27,0"/>
     </Grid>
 </Controls:MetroWindow>
