--- a/docnote/App.xaml
+++ b/docnote/App.xaml
@@ -34,7 +34,8 @@
                     <resources:BoolInverterConverter x:Key="BoolInverterConverter" />
 
                     <resources:BoolConverter x:Key="BoolConverter" />
-
+                    <resources:ComboBoxConverter x:Key="ComboBoxConverter" />
+                    
                     <Style x:Key="Validate" TargetType="{x:Type TextBox}">
                         <Style.Triggers>
                             <Trigger Property="Validation.HasError" Value="True">
